# OpenAPI.yaml
@@ -24,6 +24,7 @@ paths:
           description: Internal Server Error.
       tags:
         - Grades
+        - Grades
   /v0/product/{barcode}:
     post:
       operationId: ProductController_getProductDetails
@@ -43,7 +44,8 @@ paths:
         '500':
           description: Internal Server Error.
       tags:
-        - Product Information
+        - Product
+        - Product
   /v0/ingredients/{ingredients}:
     get:
       operationId: IngredientsController_getIngredients
@@ -65,6 +67,7 @@ paths:
             ?translate=false to the request.
       tags:
         - Ingredients
+        - Ingredients
   /v1/ingredients/{ingredients}:
     get:
       operationId: IngredientsV1Controller_getIngredients
@@ -85,6 +88,7 @@ paths:
             with disabled translation (Results might vary). Add flag
             ?translate=false to the request.
       tags:
+        - IngredientsV1
         - Ingredients
   /v0/peta/{type}:
     get:
@@ -105,6 +109,7 @@ paths:
         '500':
           description: Internal Server Error.
       tags:
+        - Peta
         - Peta
   /health:
     get:
